Add Test cases and improvements